add autoencoders and stuff

--- a/Sieci - Notebooki/Kopia_notatnika_snum_lab_regularization_and_autoencoders_pytorch.ipynb
+++ b/Sieci - Notebooki/Kopia_notatnika_snum_lab_regularization_and_autoencoders_pytorch.ipynb
@@ -56,7 +56,7 @@
      "base_uri": "https://localhost:8080/"
     },
     "id": "Z8ToIOrDr7A8",
-    "outputId": "65b05f1d-4d9e-458c-cf48-c714a6ecc983"
+    "outputId": "59b5f763-cefd-401a-b7be-898a8010b205"
    },
    "outputs": [],
    "source": [
@@ -71,11 +71,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "Ru_6o1FtcJb1",
-    "outputId": "b6840fe6-a5a9-46e1-f1de-a2678ccef6ed"
+    "id": "Ru_6o1FtcJb1"
    },
    "outputs": [],
    "source": [
@@ -173,7 +169,7 @@
      "base_uri": "https://localhost:8080/"
     },
     "id": "67epDtrvAd-I",
-    "outputId": "074b90f6-8c7a-438f-f910-45af74c3427c"
+    "outputId": "5c9fdf32-92ef-45ab-ca87-ed9465344469"
    },
    "outputs": [],
    "source": [
@@ -284,7 +280,7 @@
      "base_uri": "https://localhost:8080/"
     },
     "id": "Oi-_IKIhBLbf",
-    "outputId": "b0da1828-a2f5-47ee-fd73-baf4835b20cc"
+    "outputId": "678d1928-ff95-4d17-cd44-d480e289c2a3"
    },
    "outputs": [],
    "source": [
@@ -361,32 +357,39 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "xIR8vmlBApY4"
+   },
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 321
+     "base_uri": "https://localhost:8080/"
     },
-    "id": "xMZZ-2SIPz7V",
-    "outputId": "fd20584c-90df-4f7b-d138-df50eb82952c"
+    "id": "-2ZZzJCtGkOx",
+    "outputId": "ccb45a1d-37d8-4aa3-b2bf-d93878d7a912"
    },
    "outputs": [],
    "source": [
     "class ResNetBlock(nn.Module):\n",
-    "    def __init__(self, in_channels, out_channels, kernel_size=3, padding=1):\n",
+    "    def __init__(self, in_channels, out_channels, kernel_size=3, padding='same'):\n",
     "        super(ResNetBlock, self).__init__()\n",
-    "        self.layers = nn.Sequential(\n",
-    "            nn.Conv2d(in_channels, out_channels, kernel_size, padding=padding),\n",
-    "            nn.ReLU(),\n",
-    "            nn.Conv2d(out_channels, out_channels, kernel_size, padding=padding)\n",
-    "        )\n",
-    "        self.relu = nn.ReLU()\n",
+    "        self.conv1 = nn.Conv2d(in_channels, out_channels, kernel_size, padding=padding)\n",
+    "        self.relu1 = nn.ReLU()\n",
+    "        self.conv2 = nn.Conv2d(out_channels, out_channels, kernel_size, padding=padding)\n",
+    "        self.relu2 = nn.ReLU()\n",
     "\n",
     "    def forward(self, x):\n",
     "        identity = x\n",
-    "        out = self.layers(x)\n",
-    "        out = self.relu(out + identity) # tu pojawia się problem wymiarowości out i identity\n",
+    "        out = self.conv1(x)\n",
+    "        out = self.relu1(out)\n",
+    "        out = self.conv2(out)\n",
+    "        out = out + identity\n",
+    "        out = self.relu2(out)\n",
     "        return out\n",
     "\n",
     "class CustomDense(nn.Module):\n",
@@ -404,17 +407,16 @@
     "    def __init__(self, num_classes=10):\n",
     "        super(SimpleModel, self).__init__()\n",
     "        self.layers = nn.Sequential(\n",
-    "            ResNetBlock(in_channels=1, out_channels=32),\n",
-    "            ResNetBlock(in_channels=32, out_channels=64),\n",
+    "            ResNetBlock(in_channels=1, out_channels=1),\n",
+    "            ResNetBlock(in_channels=1, out_channels=1),\n",
     "            nn.MaxPool2d(kernel_size=2, stride=2),\n",
     "            nn.Flatten(),\n",
-    "            CustomDense(in_features=64 * 14 * 14, out_features=128),\n",
+    "            CustomDense(in_features=1 * 14 * 14, out_features=128),\n",
     "            nn.Linear(in_features=128, out_features=num_classes),\n",
     "            nn.Softmax(dim=1)\n",
     "        )\n",
     "        self._initialize_weights()\n",
     "\n",
-    "    # Inicjalizacja parametrów, która znacząco poprawi początkowe uczenie\n",
     "    def _initialize_weights(self):\n",
     "        for m in self.modules():\n",
     "            if isinstance(m, nn.Conv2d):\n",
@@ -430,7 +432,7 @@
     "\n",
     "model = SimpleModel(num_classes=10).cuda()\n",
     "optimizer = optim.Adam(model.parameters())\n",
-    "_ = train_and_test(train_loader, test_loader, model, optimizer, criterion, metric=accuracy, epochs=10, verbose=True)"
+    "_ = train_and_test(train_loader, test_loader, model, optimizer, criterion, metric=accuracy, epochs=10, verbose=True)\n"
    ]
   },
   {
@@ -454,7 +456,11 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "id": "z_7oo2C5H8sQ"
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "id": "z_7oo2C5H8sQ",
+    "outputId": "9fabf3c6-f6ab-4aaa-b76d-e9eb72ea7d14"
    },
    "outputs": [],
    "source": [
@@ -522,7 +528,7 @@
      "base_uri": "https://localhost:8080/"
     },
     "id": "6pzIwT0tH9fH",
-    "outputId": "1dbf0416-a4b4-4b20-dc57-94d632675279"
+    "outputId": "200c0676-10f5-4f38-c903-6acadeb4f497"
    },
    "outputs": [],
    "source": [
@@ -603,7 +609,7 @@
      "height": 1000
     },
     "id": "x9JBF4euH9vu",
-    "outputId": "5505d87f-dae5-4575-f0f2-990ba4ea6360"
+    "outputId": "9283808f-0d50-4ac4-e2b3-7fefb60fde06"
    },
    "outputs": [],
    "source": [
@@ -809,7 +815,7 @@
      "base_uri": "https://localhost:8080/"
     },
     "id": "8ZCTt7EiLFNS",
-    "outputId": "3e4488dd-e32e-4f85-b1fa-812bccc2ad5d"
+    "outputId": "d6ce8510-de86-4373-ec3f-f91131b4205c"
    },
    "outputs": [],
    "source": [
@@ -886,10 +892,10 @@
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
-     "height": 641
+     "height": 1000
     },
     "id": "ucUkv-MjNvmv",
-    "outputId": "b404e993-8d0a-4252-dd44-3a9833863a2a"
+    "outputId": "ed91882a-df1f-4ac9-e89e-0ebf056955d1"
    },
    "outputs": [],
    "source": [
@@ -899,26 +905,36 @@
     "plt.show()\n",
     "\n",
     "x = np.expand_dims(example, 0) # Dodatkowy wymiar na pozycję przypadku w 'batchu', by wymiarowość się zgadzała\n",
-    "\n",
+    "# print(x)\n",
+    "x = torch.from_numpy(x).float().cuda()\n",
     "# Po uczeniu wykonanym w poprzednim zadaniu, mamy dostęp do już nauczonych składowych sieci\n",
-    "latent_vector = model.encoder(ToTensor(x).cuda())\n",
-    "output = model.decoder(x)\n",
+    "x = x.view(-1, 784)  # Spłaszczenie wejścia\n",
+    "latent_vector = model.encoder(x)\n",
+    "latent_vector_np = latent_vector.detach().cpu().numpy()\n",
+    "output = model.decoder(latent_vector).detach().cpu().numpy()\n",
+    "#detach(?)\n",
     "\n",
     "print(\"Reconstructed image\")\n",
-    "plt.imshow(output.reshape(output, (28, 28)), cmap='gray')\n",
+    "plt.imshow(output.reshape((28, 28)), cmap='gray')\n",
     "plt.show()\n",
     "\n",
     "print(f\"latent_vector: {latent_vector}\")\n",
     "\n",
-    "for e in np.linspace(np.min(latent_vector), np.max(latent_vector), 11):\n",
+    "for e in np.linspace(latent_vector_np.min(), latent_vector_np.max(), 11):\n",
     "  print(f\"e: {e}\")\n",
     "\n",
     "  # Zmień wektor zmiennych ukrytych, ustawiając wartość e w odpowiednim polu wektora\n",
-    "  ...\n",
+    "  modified_latent_vector = latent_vector.clone()\n",
+    "  modified_latent_vector[0, 0] = e\n",
     "  # Użyj dekodera by wygenerować obrazek z nowego wektora zmiennych ukrytych\n",
-    "  ...\n",
+    "  generated = model.decoder(modified_latent_vector).detach().cpu().numpy().reshape((28, 28))\n",
     "  # Pokaż wynikowy obrazek\n",
-    "  ..."
+    "  plt.imshow(generated, cmap='gray')\n",
+    "  plt.title(f\"Latent dim 0 set to {e:.2f}\")\n",
+    "  plt.show()\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -939,11 +955,131 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "id": "v_OMeKBPNuGZ"
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 506
+    },
+    "id": "v_OMeKBPNuGZ",
+    "outputId": "e71166a8-7518-4ceb-83ae-6a76af0be030"
    },
    "outputs": [],
    "source": [
-    "..."
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import torch.optim as optim\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from torchvision import datasets, transforms\n",
+    "from torch.utils.data import DataLoader, Dataset\n",
+    "\n",
+    "# 1. Tworzenie zbioru danych z dodanym szumem\n",
+    "class NoisyDataset(Dataset):\n",
+    "    def __init__(self, dataset, noise_factor=0.5):\n",
+    "        self.dataset = dataset\n",
+    "        self.noise_factor = noise_factor\n",
+    "\n",
+    "    def __len__(self):\n",
+    "        return len(self.dataset)\n",
+    "\n",
+    "    def __getitem__(self, idx):\n",
+    "        img, _ = self.dataset[idx]\n",
+    "        img = np.array(img) / 255.0\n",
+    "        noise = self.noise_factor * np.random.randn(*img.shape)\n",
+    "        noisy_img = np.clip(img + noise, 0., 1.)  # Dodajemy szum\n",
+    "        return torch.tensor(noisy_img, dtype=torch.float32), torch.tensor(img, dtype=torch.float32)\n",
+    "\n",
+    "\n",
+    "# Utwórz zbiór uczący i testowy\n",
+    "# noise_factor = 0.001\n",
+    "noise_factor = 0.01\n",
+    "train_noisy_data = NoisyDataset(train_data, noise_factor=noise_factor)\n",
+    "test_noisy_data = NoisyDataset(test_data, noise_factor=noise_factor)\n",
+    "\n",
+    "train_loader = DataLoader(train_noisy_data, batch_size=64, shuffle=True)\n",
+    "test_loader = DataLoader(test_noisy_data, batch_size=64, shuffle=False)\n",
+    "\n",
+    "# 2. Definicja architektury autoenkodera\n",
+    "class Autoencoder(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super(Autoencoder, self).__init__()\n",
+    "\n",
+    "        self.encoder = nn.Sequential(\n",
+    "            nn.Linear(28 * 28, 128),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Linear(128, 64),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Linear(64, 32)\n",
+    "        )\n",
+    "\n",
+    "        self.decoder = nn.Sequential(\n",
+    "            nn.Linear(32, 64),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Linear(64, 128),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Linear(128, 28 * 28),\n",
+    "            nn.Sigmoid()\n",
+    "        )\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        x = x.view(-1, 28 * 28)  # Spłaszczenie wejścia\n",
+    "        encoded = self.encoder(x)\n",
+    "        decoded = self.decoder(encoded)\n",
+    "        return decoded.view(-1, 1, 28, 28)  # Przywrócenie wymiarów obrazu\n",
+    "\n",
+    "# 3. Trening autoenkodera\n",
+    "def train_autoencoder(train_loader, model, optimizer, criterion, epochs=3):\n",
+    "    model.train()\n",
+    "    for epoch in range(epochs):\n",
+    "        train_loss = 0\n",
+    "        for noisy_imgs, clean_imgs in train_loader:\n",
+    "            noisy_imgs, clean_imgs = noisy_imgs.cuda(), clean_imgs.cuda()\n",
+    "            optimizer.zero_grad()\n",
+    "            outputs = model(noisy_imgs)\n",
+    "            loss = criterion(outputs, clean_imgs)\n",
+    "            loss.backward()\n",
+    "            optimizer.step()\n",
+    "            train_loss += loss.item()\n",
+    "        print(f\"Epoch [{epoch + 1}/{epochs}], Loss: {train_loss / len(train_loader):.4f}\")\n",
+    "\n",
+    "# Model i optymalizacja\n",
+    "model = Autoencoder().cuda()\n",
+    "criterion = nn.MSELoss()\n",
+    "optimizer = optim.Adam(model.parameters(), lr=0.001)\n",
+    "\n",
+    "# Trening\n",
+    "train_autoencoder(train_loader, model, optimizer, criterion, epochs=10)\n",
+    "\n",
+    "# 4. Demonstracja działania\n",
+    "model.eval()\n",
+    "with torch.no_grad():\n",
+    "    # Pobierz próbkę ze zbioru testowego\n",
+    "    noisy_img, clean_img = test_noisy_data[0]\n",
+    "    noisy_img = noisy_img.unsqueeze(0).cuda()  # Dodanie wymiaru batcha\n",
+    "    clean_img = clean_img.numpy()\n",
+    "\n",
+    "    # Przetwarzanie przez autoenkoder\n",
+    "    denoised_img = model(noisy_img).squeeze(0).cpu().numpy()\n",
+    "\n",
+    "    # Wizualizacja\n",
+    "    plt.figure(figsize=(12, 4))\n",
+    "\n",
+    "    plt.subplot(1, 3, 1)\n",
+    "    plt.title(\"Noisy Image\")\n",
+    "    plt.imshow(noisy_img.squeeze().cpu().numpy(), cmap='gray')\n",
+    "    plt.axis('off')\n",
+    "\n",
+    "    plt.subplot(1, 3, 2)\n",
+    "    plt.title(\"Original Image\")\n",
+    "    plt.imshow(clean_img.squeeze(), cmap='gray')\n",
+    "    plt.axis('off')\n",
+    "\n",
+    "    plt.subplot(1, 3, 3)\n",
+    "    plt.title(\"Denoised Image\")\n",
+    "    plt.imshow(denoised_img.squeeze(), cmap='gray')\n",
+    "    plt.axis('off')\n",
+    "\n",
+    "    plt.show()\n",
+    "\n"
    ]
   }
  ],
